--- a/main.css
+++ b/main.css
@@ -1,4 +1,5 @@
-html {
+html,
+body {
   height: 100%;
 }
 
@@ -7,6 +8,8 @@ body {
   margin: 0;
   background: url(./Fire-background.png) repeat-x bottom;
   background-position-y: 150%;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
@@ -18,6 +21,7 @@ body {
 
 main {
   text-align: center;
+  flex: 1 0 auto;
 }
 
 .header__text {
@@ -25,10 +29,9 @@ main {
 }
 
 footer {
-  height: 200px;
-  width: 100%;
+  margin-top: 2rem;
 
-  background-size: cover;
+  flex-shrink: 0;
 }
 
 .header-background {
